replace more "newInteger(..)" by Integer.valueOf to improve compatibility with Java 11 and later; issue #68